updated typewriter sequence
see commit

--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
     typewriter.typeString('Hello World!')
         .pauseFor(2500)
         .deleteAll()
-        .typeString("Lets build something cool")
+        .typeString("Lets build something cool! :)")
         .pauseFor(2500)
-        .deleteChars(7)
-        .typeString('<strong>and useful!</strong>')
+        .deleteChars(4)
+        .typeString(', <strong>and useful!</strong>')
         .pauseFor(2500)
         .start();
   </script>
