--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         .typeString("Lets build something cool! :)")
         .pauseFor(2500)
         .deleteChars(4)
-        .typeString(',<br/><strong>and useful!</strong>')
+        .typeString(',<br/><strong>and useful! :D</strong>')
         .pauseFor(2500)
         .start();
   </script>
