--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       color: white;
       z-index: 2;
       grid-template-rows: 1fr auto  auto;
+      text-align: center;
     }
     .menu{
       width: 100vw;
