changed to custom linkedin profile url

--- a/index.html
+++ b/index.html
@@ -756,11 +756,11 @@
             <h2>Get In Touch</h2>
             <div class="contact-grid">
 
-                <a href="https://www.linkedin.com/in/marcos-hill-168b489b/">
+                <a href="https://www.linkedin.com/in/marcoshill/">
                     <div class="contact-card">
                         <i>🔗</i>
                         <h3>LinkedIn</h3>
-                        <p>marcos-hill-168b489b</p>
+                        <p>marcoshill</p>
                     </div>
                 </a>
 
